protect image endpoints
